--- a/main.html
+++ b/main.html
@@ -7,10 +7,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<nav>
+		<h1>3 random images</h1>
+		<ul>
+			<li><a href="https://picsum.photos/id/123/200/300"alt=Home></a></li>
+			<li><a href="https://picsum.photos/id/124/200/300"alt=About us></a></li>
+			<li><a href="https://picsum.photos/id/125/200/300"alt=Contact us></a></li>
+		</ul>
+	</nav>
 </body>
 
 </html>
