--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
 	<nav>
 		<h1>3 random images</h1>
-		
-			<a href="https://picsum.photos/id/123/200/300">Home</a>
-			<a href="https://picsum.photos/id/124/200/300">About us</a>
-			<a href="https://picsum.photos/id/125/200/300">Contact us</a>
-		
+		<ul>
+			<li><a href="https://picsum.photos/id/123/200/300">Home</a></li>
+			<li><a href="https://picsum.photos/id/124/200/300">About us</a></li>
+		<li><a href="https://picsum.photos/id/125/200/300">Contact us</a></li>
+		</ul>
 	</nav>
 </body>
 
