--- a/main.html
+++ b/main.html
@@ -8,13 +8,18 @@
 
 <body>
 	<nav>
-		<h1>3 random images</h1>
+		
 		<ul>
-			<li><a href="https://picsum.photos/id/123/200/300">Home</a></li>
+			<li><a href="www.google.com">Home</a></li>
 			<li><a href="https://picsum.photos/id/124/200/300">About us</a></li>
 		<li><a href="https://picsum.photos/id/125/200/300">Contact us</a></li>
 		</ul>
 	</nav>
+	<h1>3 random images</h1>
+	<img src = "https://picsum.photos/id/123/200/300" alt="1" />
+	<img src = "https://picsum.photos/id/124/200/300" alt="2" />
+	<img src = "https://picsum.photos/id/125/200/300" alt="3" />
+	
 </body>
 
 </html>
